Made the tutorial accessible with the keyboard and screen reader. Also fixed an issue where the Next button was clickable even when it was not visible at the screen when the step of the tutorial is explained into a modal.

--- a/theme/tutorial.less
+++ b/theme/tutorial.less
@@ -36,7 +36,7 @@
 
 #tutorialcard {
     position: relative;
-    z-index: 0;
+    z-index: 1;
     height: 6rem;
     width: 100%;
     padding-left: 1rem;
@@ -146,6 +146,7 @@ body#docs.tutorial {
 
 #root.dimmable.dimmed #tutorialcard.tutorialReady .ui.prevbutton, #root.dimmable.dimmed #tutorialcard.tutorialReady .ui.nextbutton {
     opacity: 0 !important;
+    z-index: -1;
 }
 
 #tutorialcard .ui.button.okbutton {
